<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--    header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/primary_black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Home_title"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/primary_white"
                android:gravity="center">
            </TextView>

        </LinearLayout>

    </LinearLayout>

    <!--    body-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/Home_btn_create_task"
            android:textSize="20sp"
            android:textColor="@color/primary_white"
            android:fontFamily="@font/poppins_regular"
            android:backgroundTint="@color/primary_green"
            android:onClick="toCreateTask">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/Home_pending_task"
            android:textSize="20sp"
            android:textColor="@color/primary_white"
            android:fontFamily="@font/poppins_regular"
            android:backgroundTint="@color/primary_green"
            android:onClick="toPendingTasks">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/Home_completed_tasks"
            android:textSize="20sp"
            android:textColor="@color/primary_white"
            android:fontFamily="@font/poppins_regular"
            android:backgroundTint="@color/primary_green"
            android:onClick="toCompletedTasks">
        </Button>

    </LinearLayout>

</LinearLayout>